# protopipe

./: .buildinfo  .gitignore  .mailmap  .prospector.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.html  CHANGELOG.html  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  README.rst  changelog.html  citing.html  conftest.py  environment.yml  environment_development.yml  environment_latest_release.yml  genindex.html  index.html  objects.inv  protopipe_environment.yml  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: install.sh  release-drafter.yml
_images/: inheritance-6c4d5642c9f7e41600861dea9dd11ee690c7a8ed.png.map
_modules/: index.html  typing.html
_sources/: AUTHORS.rst.txt  CHANGELOG.rst.txt  changelog.rst.txt  citing.rst.txt  index.rst.txt
_static/: documentation_options.js  switcher.json
api/: protopipe.benchmarks.BoostedDecisionTreeDiagnostic.html  protopipe.benchmarks.ClassifierDiagnostic.html  protopipe.benchmarks.ModelDiagnostic.html  protopipe.benchmarks.OnlineBinnedStats.html  protopipe.benchmarks.RegressorDiagnostic.html  protopipe.benchmarks.add_BTEL1010_weigths_to_data.html  protopipe.benchmarks.add_stats.html  protopipe.benchmarks.average_bias_of_charge_resolution.html  protopipe.benchmarks.calculate_RMS_around_1.html  protopipe.benchmarks.compute_bias.html  protopipe.benchmarks.compute_psf.html  protopipe.benchmarks.compute_resolution.html  protopipe.benchmarks.compute_weight_BTEL1010.html  protopipe.benchmarks.create_lookup_function.html  protopipe.benchmarks.get_fig_size.html  (+70 more)
(+392 files in other folders)
