[build_sphinx]
source-dir = docs
build-dir = docs/_build

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion=3.0
norecursedirs=build docs/_build
addopts = -v

[aliases]
test=pytest

[metadata]
name = protopipe
description = Prototype pipeline for the Cherenkov Telescope Array (CTA)
long_description = file: README.rst
author = Dr. Michele Peresano et al.
author_email = michele.peresano@cea.fr
license = CeCILL-B Free Software License Agreement
url = https://github.com/cta-observatory/protopipe
edit_on_github = False
github_project = cta-observatory/protopipe

[flake8]
exclude=
  build,
  docs,
  .eggs
max-line-length=90
#ignore=W291,E303,W391,F403,F401,W503,W1202
select = C,E,F,W,B,B950
ignore = E501,W503,E203
per-file-ignores =
    */__init__.py: F401, F403

[pycodestyle]
count = False
ignore = E501,W503,E203
max-line-length = 90
statistics = True

[yapf] # a code reformatter
based_on_style: pep8
dedent_closing_brackets: true
coalesce_brackets: true
join_multiple_lines: true